# hercules_cmake_playground

./: CMakeLists.txt  _gdbinit  base.cmake
app/: main.c  sci.c  sci.h
hal/include/: can.h  i2c.h  mibspi.h  pinmux.h  reg_pinmux.h  sys_pmm.h  sys_vim.h  system.h
hal/source/: adc.c  can.c  het.c  i2c.c  mibspi.c  notification.c  pinmux.c  sys_core.s  sys_intvecs.s  sys_link.ld  sys_main.c  sys_pmm.c  sys_startup.c  sys_vim.c
